--- a/index.html
+++ b/index.html
@@ -6,130 +6,40 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700|Montserrat:400,700" rel="stylesheet">
-    <!-- Normalize -->
     <link rel="stylesheet" href="styles/normalize.css">
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-
-    <!-- My Stylesheet -->
     <link rel="stylesheet" href="styles/style.css">
 
-    <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-87773186-3', 'auto');
-    ga('send', 'pageview');
-
-    </script>
   </head>
 
   <body>
 
-  <!-- TOP NAVIGATION BAR -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container-fluid">
 
-        <!-- Brand/toggle grouping for mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">
-            <img src="images/wilder-web-logo.png">
-          </a>
-        </div>
 
-        <div class="collapse navbar-collapse" id="myNavbar">
-
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#myCarousel">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#listen">Listen</a></li>
-            <li><a href="#shows">Shows</a></li>
-            <li><a href="#news">News</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div>
-
-      </div>
-    </nav>
-
-    <section class="parallax">
+    <section>
+      <button>LISTEN</button>
     </section>
 
   <!-- BEGIN ABOUT -->
 
-    <section class="container text-center" id="about">
+    <section id="about">
       <p>The Wilder (Portland, OR) plays fast, loud, high-energy rock 'n roll with a sound that sparks a mood of inspiration, and is dusted with influences by vintage groups such as Deep Purple, CCR, Foghat and The Beatles.</p>
 
-      <p class="lead">Fans have described us as <em>The Black Keys on speed.</em></p>
+      <p>Fans have described us as <em>The Black Keys on speed.</em></p>
       <br>
 
       <h2>We are...</h2>
-      <div class="row">
-        <div class="col-sm-4">
-          <p><strong>Hawk Foxman</strong></p>
-          <a href="#member1" data-toggle="collapse">
-            <img src="images/hawk.jpg" class="img-responsive img-circle person" alt="Hawk Foxman, vocalist and guitarist">
-          </a>
-          <div id="member1" class="collapse">
-            <p>Guitar/vocals</p>
-          </div>
-        </div>
 
-        <div class="col-sm-4">
-          <p><strong>Rodya</strong></p>
-          <a href="#member2" data-toggle="collapse">
-            <img src="images/rodya.jpg" class="img-responsive img-circle person" alt="Rodya, bassist">
-          </a>
-          <div id="member2" class="collapse">
-            <p>Bass</p>
-          </div>
-        </div>
-
-        <div class="col-sm-4">
-          <p><strong>Kevin VP Strand</strong></p>
-          <a href="#member3" data-toggle="collapse">
-            <img src="images/kevinvp.jpg" class="img-responsive img-circle person" alt="Kevin VP Strand, drummer">
-          </a>
-          <div id="member3" class="collapse">
-            <p>Drums</p>
-          </div>
-        </div>
-      </div>
     </section>
 
 
     <!-- BEGIN MUSIC -->
 
-    <section class="bg-1" id="listen">
-      <div class="container text-center">
-        <h2>Listen</h2>
+    <section id="listen">
 
-        <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/videoseries?list=PLG5VOo9VSb8D6M0-_88bNQvfxSfBswa1t"></iframe>
-        </div>
-        <p>The Wilder's official music video for <em>Not Our War</em>.</p>
 
-        <br>
 
-        <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/226829010&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
-        <p>The Wilder's original song, <em>Broken Heart.</em></p>
 
-        <a id="buy-button" href="https://thewilderband.bandcamp.com/album/the-wilder-ep">
-          <button>
-            <strong>Buy the EP</strong>
-          </button>
-        </a>
-      </div>
     </section>
 
     <!-- END MUSIC -->
@@ -139,47 +49,38 @@
 
     <!-- BEGIN SHOWS -->
 
-      <section class="container text-center" id="shows">
-        <h2>Show Dates</h2>
-        <p>No shows at the moment.</p>
-      </section>
+    <section >
 
+    </section>
 
-    <!-- END SHOWS -->
 
 
     <!-- BEGIN NEWS -->
-    <section class="bg-1">
-      <div class="container text-center" id="news">
-        <h2>News</h2>
-        <img id="studio-pic" class="img-responsive img-circle" src="images/in_the_studio.jpg">
-        <p>We're in the studio working on our new album!</p>
-        <p><strong>To be released in 2017</strong></p>
+    <section>
 
-      </div>
     </section>
 
 
 
     <!-- ********** CONTACT ********** -->
 
-    <section class="container text-center" id="contact">
-        <h2>Contact Us</h2>
+    <section id="contact">
+      <h2>Contact Us</h2>
 
-        <p><span class="glyphicon glyphicon-envelope"></span>Email: thewilderband@gmail.com</p>
-        <form>
-          <input type="text" placeholder="Write your message here!" required>
-          <!-- Write JavaScript/jQuery requirement for Safari -->
-          <button type="submit">
-            <strong>Send</strong>
-          </button>
-        </form>
+
+      <form>
+        <input type="text" placeholder="Write your message here!" required>
+        <!-- Write JavaScript/jQuery requirement for Safari -->
+        <button type="submit">
+          <strong>Send</strong>
+        </button>
+      </form>
 
     </section>
 
 
       <footer>
-        <div class="container text-center">
+        <div >
           <p>&copy; 2017 The Wilder</p>
           <p>Site design by Guadalupe Camacho</p>
         </div>
@@ -187,10 +88,6 @@
 
       <!-- jQuery library -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-      <!-- Latest compiled JavaScript -->
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-      <!-- My JS functions -->
-      <script src="js/function.js"></script>
 
 
   </body>
