Set background image, initial button styling

--- a/index.html
+++ b/index.html
@@ -16,61 +16,44 @@
 
 
 
-    <section>
-      <button>LISTEN</button>
+    <section id="main">
+      <h1>We are The Wilder</h1>
+      <button class="cta">LISTEN</button>
     </section>
 
-  <!-- BEGIN ABOUT -->
 
-    <section id="about">
+    <section>
+      <h2>About</h2>
       <p>The Wilder (Portland, OR) plays fast, loud, high-energy rock 'n roll with a sound that sparks a mood of inspiration, and is dusted with influences by vintage groups such as Deep Purple, CCR, Foghat and The Beatles.</p>
-
       <p>Fans have described us as <em>The Black Keys on speed.</em></p>
-      <br>
-
-      <h2>We are...</h2>
 
     </section>
 
 
     <!-- BEGIN MUSIC -->
 
-    <section id="listen">
-
-
-
-
-    </section>
-
-    <!-- END MUSIC -->
-
-
-
-
-    <!-- BEGIN SHOWS -->
-
-    <section >
-
-    </section>
-
-
-
-    <!-- BEGIN NEWS -->
     <section>
+      <h2>Listen</h2>
 
     </section>
 
 
+    <section>
+      <h2>Shows</h2>
 
-    <!-- ********** CONTACT ********** -->
+    </section>
 
-    <section id="contact">
+
+    <section>
+      <h2>News</h2>
+
+    </section>
+
+    <section>
       <h2>Contact Us</h2>
-
-
       <form>
-        <input type="text" placeholder="Write your message here!" required>
-        <!-- Write JavaScript/jQuery requirement for Safari -->
+        <input type="text" placeholder="Write your message here!" required> <!-- Write JavaScript/jQuery requirement for Safari -->
+
         <button type="submit">
           <strong>Send</strong>
         </button>
@@ -79,17 +62,15 @@
     </section>
 
 
-      <footer>
-        <div >
-          <p>&copy; 2017 The Wilder</p>
-          <p>Site design by Guadalupe Camacho</p>
-        </div>
-      </footer>
+    <footer>
 
-      <!-- jQuery library -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+      <p>&copy; 2017 The Wilder</p>
+      <p>Site design by Guadalupe Camacho</p>
+    </footer>
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
 
   </body>
-
 </html>
