--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700|Montserrat:400,700" rel="stylesheet">
+
     <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700|Montserrat:400,700" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
 
   </head>
 
   <body>
 
-
-
     <section id="main">
       <h1>We are The Wilder</h1>
-      <button class="cta">LISTEN</button>
+
+      <button class="cta"><i class="fa fa-play" aria-hidden="true"></i>LISTEN</button>
     </section>
 
 
