Add additional pages

--- a/contact.html
+++ b/contact.html
@@ -18,42 +18,12 @@
 
     <section id="main">
       <div class="wrapper">
-        <h1><span>We are</span></h1>
-        <h1><span>The Wilder</span></h1>
+        <h1><span>Contact</span></h1>
 
-        <button class="cta"><i class="fa fa-play" aria-hidden="true"></i>LISTEN</button>
       </div>
     </section>
 
 
-    <section>
-      <div class="wrapper">
-        <h2>About</h2>
-        <p>The Wilder (Portland, OR) plays fast, loud, high-energy rock 'n roll with a sound that sparks a mood of inspiration, and is dusted with influences by vintage groups such as Deep Purple, CCR, Foghat and The Beatles.</p>
-        <p>Fans have described us as <em>The Black Keys on speed.</em></p>
-      </div>
-
-    </section>
-
-
-    <!-- BEGIN MUSIC -->
-
-    <section>
-      <h2>Listen</h2>
-
-    </section>
-
-
-    <section>
-      <h2>Shows</h2>
-
-    </section>
-
-
-    <section>
-      <h2>News</h2>
-
-    </section>
 
     <section>
       <h2>Contact Us</h2>
